--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ Django==4.2.9
 filelock==3.13.1
 fsspec==2024.2.0
 gTTS==2.5.1
+gunicorn==22.0.0
 huggingface-hub==0.20.3
 hyperlink==21.0.0
 idna==3.6
@@ -26,6 +27,7 @@ packaging==23.2
 pandas==2.2.1
 parsel==1.8.1
 Protego==0.3.0
+psycopg2==2.9.9
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
 PyAudio==0.2.14
@@ -60,4 +62,5 @@ typing_extensions==4.9.0
 tzdata==2023.4
 urllib3==2.2.0
 w3lib==2.1.2
+whitenoise==6.6.0
 zope.interface==6.2
