--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ gunicorn==22.0.0
 huggingface-hub==0.20.3
 hyperlink==21.0.0
 idna==3.6
+incremental==22.10.0
 itemadapter==0.8.0
 itemloaders==1.1.0
 jmespath==1.0.1
@@ -34,6 +35,7 @@ Protego==0.3.0
 psycopg2==2.9.9
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
+PyAudio==0.2.14
 pycparser==2.21
 PyDispatcher==2.0.7
 pydub==0.25.1
@@ -64,6 +66,7 @@ tokenizers==0.15.2
 tqdm==4.66.2
 transformers==4.38.1
 Twisted==23.10.0
+twisted-iocpsupport==1.0.4
 typing_extensions==4.9.0
 tzdata==2023.4
 tzlocal==5.2
