--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ Protego==0.3.0
 psycopg2==2.9.9
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
+PyAudio==0.2.14
 pycparser==2.21
 PyDispatcher==2.0.7
 pydub==0.25.1
