--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.7.2
 attrs==23.2.0
 Automat==22.10.0
+beautifulsoup4==4.12.3
 certifi==2023.11.17
 cffi==1.16.0
 charset-normalizer==3.3.2
@@ -9,7 +10,9 @@ colorama==0.4.6
 constantly==23.10.4
 cryptography==42.0.3
 cssselect==1.2.0
+dj-database-url==2.1.0
 Django==4.2.9
+docopt==0.6.2
 filelock==3.13.1
 fsspec==2024.2.0
 gTTS==2.5.1
@@ -21,11 +24,13 @@ incremental==22.10.0
 itemadapter==0.8.0
 itemloaders==1.1.0
 jmespath==1.0.1
+Js2Py==0.74
 lxml==5.1.0
 numpy==1.26.4
 packaging==23.2
 pandas==2.2.1
 parsel==1.8.1
+pipwin==0.5.2
 Protego==0.3.0
 psycopg2==2.9.9
 pyasn1==0.5.1
@@ -34,7 +39,10 @@ pycparser==2.21
 PyDispatcher==2.0.7
 pydub==0.25.1
 pygame==2.5.2
+pyjsparser==2.7.1
 pyOpenSSL==24.0.0
+PyPrind==2.11.3
+pySmartDL==1.3.4
 python-dateutil==2.8.2
 python-http-client==3.3.7
 pytz==2024.1
@@ -48,6 +56,7 @@ Scrapy==2.11.1
 sendgrid==6.11.0
 service-identity==24.1.0
 six==1.16.0
+soupsieve==2.5
 SpeechRecognition==3.10.1
 sqlparse==0.4.4
 starkbank-ecdsa==2.2.0
@@ -58,6 +67,7 @@ transformers==4.38.1
 Twisted==23.10.0
 typing_extensions==4.9.0
 tzdata==2023.4
+tzlocal==5.2
 urllib3==2.2.0
 w3lib==2.1.2
 whitenoise==6.6.0
